# SemanticNear

./: .gitignore  README.md
frontend/: package.json  tailwind.config.cjs
frontend/src/components/: Loading.tsx  RelevantText.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/api/: [accountId].ts
frontend/src/styles/: Home.module.css  globals.css
server/: Dockerfile  pyproject.toml  server.py
server/scripts/: setup.sh
