[tool.poetry]
name = "server"
version = "0.1.0"
description = "Semantic Search for Near Social"
authors = ["verumlotus <universumtremendum@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
langchain = "^0.0.82"
openai = "^0.26.5"
nltk = "^3.8.1"
faiss-cpu = "^1.7.3"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
mypy = "^1.0.0"
bs4 = "^0.0.1"
poetry-dotenv-plugin = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
